--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,94 @@
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 body{
   background-color: black;
+}
+
+img{
+  width:70px; 
+  height:70px;
 }
 
 nav{
   display: flex;
   justify-content: space-between;
-  padding: 30px 70px;
+  padding: 10px 10px 80px;
+}
+
+h1{
+  font-size: 50px;
+  text-align: center;
+}
+h4{
+  font-size:50px;
+  text-transform:'uppercase';
+  letter-spacing:3px;
+}
+
+.overlay{
+  backdrop-filter: brightness(40%);
+  height: 100vh;
+  width: 100%;
+  padding: 30px 50px;
+}
+button{
+  font-size: 30px !important;
+  letter-spacing: 3px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+button:hover{
+  color: black;
+  border: none;
+  outline: none;
+}
+
+#civic-dropdown-container div{
+  background-color: rgba(0, 0, 0, 0.5) !important ;
+}
+#civic-dropdown-container>button:hover{
+  background-color: rgba(0, 0, 0, 0.5) !important ;
+}
+
+@media (max-width:550px) {
+  body{
+    background-position: center;
+  }
+
+  button{
+    font-size: 15px !important;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+  }
+
+  img{
+    width:30px; 
+    height:30px;
+  }
+
+  nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px 50px;
+  }
+  
+  h1{
+    font-size: 20px;
+    text-align: center;
+  }
+
+  h4{
+    font-size:15px;
+    text-transform:'uppercase';
+    letter-spacing:1.5px;
+  }
+
+  .overlay{
+    backdrop-filter: brightness(40%);
+    height: 100vh;
+    width: 100%;
+    padding: 20px 30px;
+  } 
 }
